# energiemeneer-core

./: .gitignore  BOUWPLAN.md  CLAUDE.md  MANIFEST.in  Meesterbrein.md  Meesterbrein_UltiemeTool_v4_0.md  ONBOARDING.md  README.md  pyproject.toml
docs/: safety-laag-inventaris.md
energiemeneer_core/: agenda_format.py  bag.py  email_format.py  environment.py  ep_online.py  events.py  graph_auth.py  objectbib.py  prijs.py  storage.py
energiemeneer_core/graph_api/: __init__.py  _client.py  _fake_client.py  agenda.py  mail.py  onedrive.py  onenote.py  todo.py
energiemeneer_core/objectbibliotheken/Appartement/: Objectenbibliotheek 1965-1974.xml  Objectenbibliotheek 1975-1982.xml  Objectenbibliotheek 1983-1987.xml  Objectenbibliotheek 1988-1991.xml  Objectenbibliotheek 1992-2013.xml  Objectenbibliotheek 2021 en later.xml  Objectenbibliotheek voor 1965.xml
energiemeneer_core/objectbibliotheken/Hoekwoning/: Deelconstructies.xml  Objectenbibliotheek 1965-1974.xml  Objectenbibliotheek 1975-1982.xml  Objectenbibliotheek 1983-1987.xml  Objectenbibliotheek 1988-1991.xml  Objectenbibliotheek 1992-2013.xml  Objectenbibliotheek 2021 en later.xml  Objectenbibliotheek voor 1965.xml
energiemeneer_core/objectbibliotheken/Tussenwoning/: Objectenbibliotheek 1965-1974.xml  Objectenbibliotheek 1975-1982.xml  Objectenbibliotheek 1983-1987.xml  Objectenbibliotheek 1988-1991.xml  Objectenbibliotheek 1992-2013.xml  Objectenbibliotheek 2021 en later.xml  Objectenbibliotheek voor 1965.xml
energiemeneer_core/objectbibliotheken/Twee onder een kap woning/: Objectenbibliotheek 1965-1974.xml  Objectenbibliotheek 1975-1982.xml  Objectenbibliotheek 1983-1987.xml  Objectenbibliotheek 1988-1991.xml  Objectenbibliotheek 1992-2013.xml  Objectenbibliotheek 2021 en later.xml  Objectenbibliotheek voor 1965.xml
energiemeneer_core/objectbibliotheken/Vrijstaande woning/: Objectenbibliotheek 1965-1974.xml  Objectenbibliotheek 1975-1982.xml  Objectenbibliotheek 1983-1987.xml  Objectenbibliotheek 1988-1991.xml  Objectenbibliotheek 1992-2013.xml  Objectenbibliotheek voor 1965.xml
tests/: conftest.py  test_agenda_format.py  test_bag.py  test_email_format.py  test_ep_online.py  test_events.py  test_fake_client.py  test_graph_api_agenda.py  test_graph_api_mail.py  test_graph_api_onedrive.py  test_graph_api_onenote.py  test_graph_api_todo.py  test_graph_auth.py  test_objectbib.py  test_prijs.py  test_storage.py
