[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energiemeneer-core"
version = "0.7.0"
description = "Gedeelde Python-library voor het Energiemeneer energielabel-platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Kevin Valkenhoff", email = "kevinvalkenhoff@gmail.com" },
]
dependencies = [
    "requests>=2.31",
    # zoneinfo is standaard in Python, maar de tijdzone-gegevens zelf
    # ontbreken soms op kale Linux-containers (Railway) en op Windows.
    # tzdata garandeert dat 'Europe/Amsterdam' overal werkt (agenda_format).
    "tzdata",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["energiemeneer_core*"]

# De VABI-objectenbibliotheek-templates (per woningtype + bouwjaar-categorie)
# reizen mee als package-data, zodat consumers (zoals admin-portal op Railway)
# ze kunnen lezen via energiemeneer_core.objectbib. De nta8800.exe hoort hier
# NIET bij (licentie-software + zware binary).
[tool.setuptools.package-data]
energiemeneer_core = ["objectbibliotheken/**/*.xml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
